# rppicco_template

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  cleanBuild.sh  cleanTest.sh  pico-examples.code-workspace  requirements.txt  rmDocker.sh  startDocker.sh
.devcontainer/: devcontainer.json
.github/workflows/: main.yml
cmake/: FindSphinx.cmake
components/: CMakeLists.txt
components/main/: CMakeLists.txt
components/main/src/: main.cpp
components/max31865/: CMakeLists.txt
components/max31865/inc/: max31865.h
components/max31865/src/: max31865.cpp
components/max31865/test/: configRegister_test.cpp  faultStatus_test.cpp  faultThresholdRegister_test.cpp  max31865_test.cpp  rtdRegister.cpp
components/spi/: CMakeLists.txt
components/spi/inc/: spi.h  spiMock.h
components/spi/src/: spi.cpp
components/spi/test/: spiData_test.cpp  spi_test.cpp
doc/: CMakeLists.txt
doc/source/: conf.py  index.rst  z_chapter.rst
doc/source/?/.java/fonts/1.8.0_372/: fcinfo-1-d36a62b57471-Linux-5.15.0-79-generic-en.properties
